Capturing and displaying user 2 name.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
             <h3 id='user-two-wins-text'></h3>
             <h3 id='user-two-losses-text'></h3>
             <h3 id='user-two-ties-text'></h3>
+            <!-- Capture and store User 1's name -->
+            <form id='user-two-name-form'>
+                <div class='form-name'>
+                    <label id='user-two-name-label' for='user-two-name-field'>Create a username:</label>
+                    <input id='user-two-name-field' type='text' maxlength='25'></input>
+                </div>
+                <div class='form-sub'>
+                    <button id='user-two-sub-button' type='button'>Print your name!</button>
+                </div>
+            </form>
+            <div>
+                <p id='user-two-name-display'></p></div>
+            </div>
         </div>
         <!-- Display both users answers at the same time and announce the winner -->
         <div id="game-outcome"> 
