Added two buttons for choice of 2 player mode vs computer mode

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <h2> Instructions : This seems unesssary but pick r, p, or s. The computer or another user does the same. Then you see who wins. really you're still reading this. Pick r, p, or s to start. I don't know how else to explain this to you. </h2>
     </div>
     
+    <!-- Instructions of the game -->
+    <div id="start-buttons">
+        <button id='2-player-mode-start-button' type='button'>2 Player Mode Start</button>
+        <button id='computer-mode-start-button' type='button'>Challenge Computer Mode</button>
+    </div>
+
     <!-- Give user 1 an option to choose r,p,s -->
     <div id="user-one-stats"> 
         <h4> Player 1 </h4>
