Asking for names only shows if 2 player mode is chosen

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Give user 1 an option to choose r,p,s -->
-    <div id="user-one-stats"> 
+    <div id="user-one-stats" style="display:none;"> 
         <h4> Player 1 </h4>
         <h3 id='user-one-choice-text'></h3>
         <h3 id='user-one-wins-text'></h3>
@@ -62,7 +62,7 @@
         </div>
         
         <!-- Give user 2 an option to choose r,p,s-->
-        <div id="user-two-stats"> 
+        <div id="user-two-stats" style="display:none;"> 
             <h4> Player 2 </h4>
             <h3 id='user-two-choice-text'></h3>
             <h3 id='user-two-wins-text'></h3>
