Added capturing user chices to firebase

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Link to Google Fonts API -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Oswald|Roboto" rel="stylesheet" type="text/css">
     <!-- Linking to JavaScript -->
-    <script src="assets/javascript/app.js" type="text/javascript"></script>
+    <script src="assets/javascript/app_version1.js" type="text/javascript"></script>
     <!-- CSS Spcific Styling-->
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -68,7 +68,7 @@
             <h3 id='user-two-wins-text'></h3>
             <h3 id='user-two-losses-text'></h3>
             <h3 id='user-two-ties-text'></h3>
-            <!-- Capture and store User 1's name -->
+            <!-- Capture and store User 2's name -->
             <form id='user-two-name-form'>
                 <div class='form-name'>
                     <label id='user-two-name-label' for='user-two-name-field'>Create a username:</label>
@@ -91,3 +91,6 @@
         
     </body>
     </html>
+
+    
+   
